sans lien symbolique

--- a/templates/nginx/default.j2
+++ b/templates/nginx/default.j2
@@ -4,7 +4,7 @@ upstream php {
 
 server {
         server_name wiki;
-        root /var/www/html;
+        root /appli/projects/md1/nginx;
         index index.php;
         location = /favicon.ico {
                 log_not_found off;
