--- a/templates/nginx/default.j2
+++ b/templates/nginx/default.j2
@@ -3,7 +3,7 @@ upstream php {
 }
 
 server {
-        server_name wiki;
+        server_name MachineCible;
         root /appli/projects/md1/nginx;
         index index.php;
         location = /favicon.ico {
